<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nexum.formlavadoapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_print"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_print"/>
    <item
        android:id="@+id/action_check"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_print"/>
    <item
        android:id="@+id/action_getTicket"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_getTicket"/>

</menu>
